@@ -1,3 +1,8 @@
+2002-04-15  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* poem-xm.el (char-length): New function.
+	(string-to-char-list): New function.
+
 2002-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* pym.el: Add a note that `def*-maybe' might not provide functions
